# PartsBasedDetector

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  README.md  estimator.jl
dataset/: load_animate_reshape.m  load_ethz.py  load_fashonista.m  load_inria.sh  load_lsp.m  plot_overlaid.py  util.py
include/: Candidate.hpp  PoseEstimator.hpp  estimator.h
matlab/: compile.m  demo_animate_reshape.m  demo_ethz.m  demo_fashionista.m  demo_lsp.m  training_demo.m
models/: lsp.mat
src/: CMakeLists.txt  DynamicProgram.cpp  PoseEstimator.cpp  SearchSpacePruning.cpp  Visualize.cpp  demo.cpp  estimator.cpp  pose_estimator_demo.c  pose_estimator_demo.cpp
